--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,7 @@ footer{
 .product img{
   max-width: 35rem;
   max-height: 36rem;
+  
 }
 .product-price{
   display: flex;
@@ -113,4 +114,16 @@ a{
 }
 .button.primary{
   background-color: #f0c040;
+}
+
+/* filter */ 
+.filter{
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  margin: 1rem;
+  border-bottom: 0.1rem #c0c0c0 solid;
+}
+.filter div{
+  flex: 1;
 }
